refactor :: remove collectors